# otus-cpp-prof-6

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: release.yml
include/: matrix.hpp
src/: main.cpp
